# quafel

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  classes.py  config.py  idea.py  index.html  mkdocs.yml  pennylane-test_duration_depth.py  pennylane-test_duration_qubits.py  plot_util.py  pyproject.toml  qiskit-test_duration.py  qiskit-test_duration_depth.py  qiskit-test_duration_multiprocessing.py  qiskit-test_duration_qubits.py  qiskit-test_expval.py  requirements.txt  slurm.sh  test_duration.py  utils.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  docs.yml  publish.yml  quality.yml  test.yml
adding_frameworks/: index.html
artifacts/: _real_duration_depth_7_10.pkl  _real_duration_qubits_7_7.pkl  cirq_duration_depth_7_10.pkl  cirq_duration_qubits_7_10.pkl  duration_matrix_depth.pkl  duration_matrix_qubits.pkl  matrix_duration_depth_3_3.pkl  matrix_duration_depth_7_10.pkl  matrix_duration_qubits_3_3.pkl  matrix_duration_qubits_7_10.pkl  pennylane_duration_depth_7_10.pkl  pennylane_duration_qubits_7_10.pkl  qibo_duration_depth_7_10.pkl  qibo_duration_qubits_7_10.pkl  qiskit_duration_depth_7_10.pkl  qiskit_duration_qubits_7_10.pkl
conf/base/: catalog.yml  logging.yml
conf/base/parameters/: data_generation.yml  data_science.yml  visualization.yml
conf/dask/: parameters.yml
configuration/: index.html
coverage/: class_index.html  function_index.html  index.html  status.json  z_0dab2ffcc4eaa008___init___py.html  z_147e2aef786dd76c___init___py.html  z_147e2aef786dd76c_nodes_py.html  z_147e2aef786dd76c_pipeline_py.html  z_14f1297e42ea0ec4___init___py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_test_run_py.html  z_b2e44757a1ff9613___init___py.html  z_b2e44757a1ff9613_test_data_generation_py.html  z_c720015b02cfcaf6___init___py.html  z_d6b8a6134ae827ad___init___py.html  z_d6b8a6134ae827ad_test_pipeline_py.html  z_eef2655da8f06565___init___py.html  z_eef2655da8f06565_test_nodes_py.html
data_structure/: index.html
docs/: adding_frameworks.md  configuration.md  data_structure.md  index.md  overview.drawio  setup.md  usage.md
docs/source/: conf.py  index.md  index.rst
search/: search_index.json
setup/: index.html
src/: requirements.in  requirements.txt  requirements_dev.in  setup.py
src/quafel/: __init__.py  __main__.py  cli.py  hooks.py  pipeline_registry.py  settings.py
src/quafel/pipelines/data_generation/: nodes.py  pipeline.py
src/quafel/pipelines/data_science/: __init__.py  frameworks.py  nodes.py  pipeline.py
src/quafel/pipelines/visualization/: README.md  __init__.py  nodes.py  pipeline.py
src/quafel/runner/: __init__.py  dask_runner.py  parallel_runner.py
src/tests/: test_measures.py  test_run.py
src/tests/pipelines/data_generation/: test_data_generation.py
tests/pipelines/data_science/: test_nodes.py
tests/pipelines/visualization/: test_pipeline.py
usage/: index.html
