[tool.poetry]
name = "quafel"
version = "0.1.0"
description = ""
authors = ["lc3267 <melvin.strobl@kit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
kedro = {extras = ["pandas"], version = "^0.18.6"}
pennylane = "^0.29.1"
qiskit = "^0.41.1"
cirq = "^1.1.0"
qibo = "^0.1.11"
kedro-viz = "5.3.0"
pennylane-qiskit = "^0.29.0"
qibojit = "^0.0.7"
qulacs = "^0.5.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pre-commit = "^2.20.0"
black = "^22.10.0"
flake8 = "^6.0.0"
mkdocs = "^1.4.2"
mkdocstrings = "^0.19.0"
markdown-include = "^0.8.0"
mkdocs-material = "^8.5.11"
mkdocstrings-python = "^0.8.2"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.kedro]
package_name = "quafel"
project_name = "quafel"
project_version = "0.18.4"

[tool.isort]
profile = "black"


[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/quafel -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]
